Cleaned up html table

--- a/scratch/Color_demo.html
+++ b/scratch/Color_demo.html
@@ -125,137 +125,6 @@
 <tr><td bgcolor="#52B4CF">&nbsp; #52B4CF 4 66 121       &gt;&gt;Sino-Tibetan languages&gt;Kukish languages&gt;Northern&gt;,064,Kom</td></tr>
 <tr><td bgcolor="#000000">&nbsp; #000000</td></tr>
 <tr><td bgcolor="#584D47">&nbsp; #584D47 5 1 122       &gt;&gt;,123,Others</td></tr>
+<tr><td bgcolor="#000000">&nbsp; #000000</td></tr>
 <tr><td bgcolor="#61B4DF">&nbsp; #61B4DF 6 1 123       &gt;&gt;Indo-European languages&gt;Germanic languages&gt;West Germanic languages&gt;Ingvaeonic languages&gt;Anglo-Frisian languages&gt;English languages&gt;,040,English</td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp; </td></tr>
-<tr><td bgcolor="">&nbsp;  </td></tr>
 </table></body></html>
